Docker build automated + Docker image size reduced from 436mb to 115mb